--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
                sudo dpkg -i sbt-1.1.0.deb
         - run:
             name: Test
-            command: "sbt +fullTest"
+            command: "sbt universeTest"
         - run:
             name: Codecov uploader
             command: "bash <(curl -s https://codecov.io/bash)"
