--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
             command: |
                wget -q https://dl.bintray.com/sbt/debian/sbt-1.1.4.deb
                sudo dpkg -i sbt-1.1.4.deb
-        - run4
+        - run:
             name: Test
             command: "sbt \"project udp\" +fullTest"
   core:
