--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,13 @@ jobs:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
-        - setup_remote_docker
+        - run:
+            name: Install docker engine
+            command: |
+              sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
+              sudo apt-add-repository 'deb https://apt.dockerproject.org/repo ubuntu-xenial main'
+              sudo apt-get update
+              sudo apt-get install -y docker-engine
         - run:
             name: Insatll sbt
             command: |
@@ -19,7 +25,6 @@ jobs:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
-        - setup_remote_docker
         - run:
             name: Insatll sbt
             command: |
@@ -33,7 +38,6 @@ jobs:
         - image: circleci/openjdk:8-jdk
       steps:
         - checkout
-        - setup_remote_docker
         - run:
             name: Insatll sbt
             command: |
