--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
         - run:
             name: Install docker engine
             command: |
+              apt-get install python-software-properties
               sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
               sudo apt-add-repository 'deb https://apt.dockerproject.org/repo ubuntu-xenial main'
               sudo apt-get update
