--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
             command: |
               sudo apt-get update
               sudo apt-get install software-properties-common
+              sudo apt-get install apt-transport-https
               sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
               sudo apt-add-repository 'deb https://apt.dockerproject.org/repo ubuntu-xenial main'
               sudo apt-get update
