--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
               sudo apt-add-repository 'deb https://apt.dockerproject.org/repo ubuntu-xenial main'
               sudo apt-get update
               sudo apt-get install -y docker-engine
+              sudo service docker start
         - run:
             name: Insatll sbt
             command: |
