--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ services:
 script:
   - sbt ++$TRAVIS_SCALA_VERSION unitTesting/publishLocal
   - sbt ++$TRAVIS_SCALA_VERSION itTesting/publishLocal
-  - sbt ++$TRAVIS_SCALA_VERSION coreTest macrosTest asyncTest urlTest akkaTest
+  - sbt ++$TRAVIS_SCALA_VERSION coreTest macrosTest urlTest asyncTest akkaTest
   
 after_success:
  - bash <(curl -s https://codecov.io/bash)
