--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ script:
   - sbt ++$TRAVIS_SCALA_VERSION unitTesting/publishLocal
   - sbt ++$TRAVIS_SCALA_VERSION itTesting/publishLocal
   - sbt ++$TRAVIS_SCALA_VERSION coreTest macrosTest
-  - sbt urlTest
-  - sbt urlHttp/publishLocal
-  - sbt asyncTest akkaTest
+  - sbt ++$TRAVIS_SCALA_VERSION urlTest
+  - sbt ++$TRAVIS_SCALA_VERSION urlHttp/publishLocal
+  - sbt ++$TRAVIS_SCALA_VERSION asyncTest akkaTest
   
 after_success:
  - bash <(curl -s https://codecov.io/bash)
