--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ script:
   - sbt ++$TRAVIS_SCALA_VERSION itTesting/publishLocal
   - sbt ++$TRAVIS_SCALA_VERSION coreTest macrosTest
   - sbt ++$TRAVIS_SCALA_VERSION urlTest
-  - sbt ++$TRAVIS_SCALA_VERSION urlHttp/publishLocal
-  - sbt ++$TRAVIS_SCALA_VERSION udpTest
+#  - sbt ++$TRAVIS_SCALA_VERSION urlHttp/publishLocal
+#  - sbt ++$TRAVIS_SCALA_VERSION udpTest
   - sbt ++$TRAVIS_SCALA_VERSION asyncTest akkaTest
   
 after_success:
