--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,20 +7,12 @@ align = more
 maxColumn = 100
 encoding = "UTF-8"
 docstrings = ScalaDoc
-continuationIndent {
-  defnSite = 4
-  callSite = 2
-  extendSite = 4
-}
+continuationIndent.extendSite = 2
 assumeStandardLibraryStripMargin = true
-newlines {
-  alwaysBeforeTopLevelStatements = true
-  neverInResultType = true
-}
+newlines.alwaysBeforeTopLevelStatements = true
 rewrite.rules = [SortImports]
 verticalMultilineAtDefinitionSite = true
 verticalMultiline {
-  newlineBeforeImplicitKW = true
   arityThreshold = 3
   newlineAfterOpenParen = true
 }
